set(NU2DEBUG_SOURCES
	"${CMAKE_CURRENT_SOURCE_DIR}/dll_main.cc")

set(NU2DEBUG_INCLUDE_DIRS
	${PROJECT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR})

add_library(mod SHARED ${NU2DEBUG_SOURCES})

target_compile_definitions(mod PUBLIC WIN32_LEAN_AND_MEAN WINDOWS_IGNORE_PACKING_MISMATCH)

target_include_directories(mod PUBLIC ${NU2DEBUG_INCLUDE_DIRS})